--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -1398,6 +1398,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>American Hunanese Association (AHA)</td>
+      <td>美国圣地亚哥湖南同乡会</td>
+      <td>United States</td>
+      <td>Xinghuo Education Charitable Fund Student Financial Aid Grants</td>
+      <td>星火教育慈善基金助学金发放</td>
+      <td>Hunan Province / Hainan Province / Gansu Province</td>
+      <td>湖南省,海南省,甘肃省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2021-04-18</td>
+      <td>2021-12-31</td>
+      <td>Hunan Province, Yiyang City Education Foundation</td>
+      <td>湖南省益阳市教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
       <td>American Intellectual Property Law Association (AIPLA)</td>
       <td>美国知识产权法律协会</td>
       <td>United States</td>
@@ -22767,6 +22784,40 @@
       <td>Unknown</td>
     </tr>
     <tr>
+      <td>Hong Kong Guangzhou Social Groups General Association Charitable Fund Limited</td>
+      <td>香港广州社团总会慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Reception of Second Batch of Donations</td>
+      <td>接收香港广州社团总会慈善基金有限公司的第二笔捐赠</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Unknown</td>
+      <td>2021-02-07</td>
+      <td>2022-02-06</td>
+      <td>Guangzhou City Charitable Association</td>
+      <td>广州市慈善会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Guangzhou City Bureau of Civil Affairs</td>
+      <td>广州市民政局</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Guangzhou Social Groups General Association Charitable Fund Limited</td>
+      <td>香港广州社团总会慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Reception of Directed Donations</td>
+      <td>接收香港广州社团总会慈善基金有限公司定向捐赠</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Unknown</td>
+      <td>2021-01-25</td>
+      <td>2022-01-24</td>
+      <td>Guangzhou City Charitable Association</td>
+      <td>广州市慈善会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Guangzhou City Bureau of Civil Affairs</td>
+      <td>广州市民政局</td>
+    </tr>
+    <tr>
       <td>Hong Kong Hok Shan Association Limited</td>
       <td>香港鹤山同乡会有限公司</td>
       <td>Hong Kong</td>
@@ -30978,6 +31029,23 @@
       <td>中国残疾人联合会</td>
     </tr>
     <tr>
+      <td>Lions Clubs International</td>
+      <td>国际狮子会</td>
+      <td>United States</td>
+      <td>China Council of Lions Clubs 2021 Member Training</td>
+      <td>中国狮子联会2021年会员培训</td>
+      <td>Heilongjiang Province</td>
+      <td>黑龙江省</td>
+      <td>Civil Society Capacity-Building</td>
+      <td>2021-06-11</td>
+      <td>2021-06-13</td>
+      <td>China Council of Lions Clubs</td>
+      <td>中国狮子联会</td>
+      <td>Non-profit or Foundation</td>
+      <td>China Disabled Persons’ Federation</td>
+      <td>中国残疾人联合会</td>
+    </tr>
+    <tr>
       <td>Lions Clubs International China Affairs Committee</td>
       <td>国际狮子会中国事务委员会</td>
       <td>United States</td>
@@ -37130,6 +37198,23 @@
       <td>Non-profit or Foundation</td>
       <td>Shanghai City, Pudong New District Bureau of Environmental Protection and Urban Appearance and Sanitation</td>
       <td>上海市浦东新区环境保护和市容卫生管理局</td>
+    </tr>
+    <tr>
+      <td>Novo Nordisk Haemophilia Foundation (NNHF)</td>
+      <td>诺和诺德血友病基金会</td>
+      <td>Switzerland</td>
+      <td>Novo Nordisk Hemophilia Foundation Project</td>
+      <td>诺和诺德血友病基金会项目</td>
+      <td>Shandong Province</td>
+      <td>山东省</td>
+      <td>Health</td>
+      <td>2021-04-05</td>
+      <td>2021-12-31</td>
+      <td>Blood Center of Shandong Province</td>
+      <td>山东省血液中心</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>NT Yuen Long District Residents Fraternity Association Limited</td>
@@ -51886,6 +51971,23 @@
       <td>Non-profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>U.S. Rende Charitable Foundation</td>
+      <td>美国仁德慈善基金会</td>
+      <td>United States</td>
+      <td>Donations for the Prevention and Control of the Novel Coronavius</td>
+      <td>防控新型冠状病毒肺炎捐赠活动</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Health</td>
+      <td>2021-03-29</td>
+      <td>2021-04-29</td>
+      <td>Fenghuang County People's Hospital</td>
+      <td>凤凰县人民医院</td>
+      <td>Hospital or Medical Center</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Union of Godown and Wharf Transportation Workers</td>
