--- a/viz/meinv/meinv_heatmap3.html
+++ b/viz/meinv/meinv_heatmap3.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Women in Governance by Province</title>
+    <meta http-Equiv="Cache-Control" Content="no-cache" />
+    <meta http-Equiv="Pragma" Content="no-cache" />
+    <meta http-Equiv="Expires" Content="0" />
   </head>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
