--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset='utf-8' />
-      <title>Representative Offices</title>
+      <title>NSL-Related Arrests and Charges</title>
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
       <style>
@@ -156,7 +156,7 @@
 
 <!–– add your tableizer data above this line––>
 
-<script src="jessicachinafile.github.io/tablefilter/tablefilter.js"></script>
+<script src="https://jessicachinafile.github.io/tablefilter/tablefilter.js"></script>
 
 <script>
 var filtersConfig = {
