--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -175,4 +175,4 @@ var tf = new TableFilter('filter', filtersConfig);
 tf.init();
 </script>
 
-<!–– add your tableizer data above this line––> </body> </html>
+</body> </html>
