--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -160,7 +160,7 @@
 
 <script>
 var filtersConfig = {
-    base_path: 'tablefilter/',
+    base_path: 'https://jessicachinafile.github.io/tablefilter/',
     auto_filter: true,
     auto_filter_delay: 1100, //milliseconds
     filters_row_index: 1,
