--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset='utf-8' />
-      <title>NSL-Related Arrests and Charges</title>
+      <title>1.NSL-Related Arrests and Charges</title>
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
       <style>
