--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
-      <meta charset='utf-8' />
-      <title>1.NSL-Related Arrests and Charges</title>
+      <meta charset="utf-8">
+      <title>NSL-Related Arrests and Charges</title>
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
       <style>
 
+			body{
+					font-family: Georgia, Times, "Times New Roman", serif;
+			}
 
         table.sortable thead {
             background-color:#eee;
             color:#000000;
             font-family: Georgia, Times, "Times New Roman", serif;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 16px;
             cursor: default;
         }
 
         table.sortable {
-      		font-size: 12px;
           font-family: Georgia, Times, "Times New Roman", serif;
+					font-size: 14px;
       	}
 
         table.sortable {border-spacing: 0}
@@ -37,7 +41,7 @@
 	<!–– add your tableizer data below this line, removing table class=tableizer-table and tr class=tableizer-firstrow ––>
 
 	<thead>
-<tr><th style="width:3%">No.</th><th style="width:5%">Identity                                 </th><th style="width:10%">Details                                                                                                                                                                                                                                                                       </th><th style="width:5%">Arrest Date  </th><th style="width:5%">Ground(s) for Arrest (NSL)                                      </th><th style="width:5%">Ground(s) for Arrest (Non-NSL)                                                                                                           </th><th style="width:5%">Charge Date  </th><th style="width:5%">Charge(s) (NSL)                    </th><th style="width:5%">Charge(s) (Non-NSL)                                                                                                           </th><th style="width:5%">Status                                                                </th></tr>
+<tr><th style="width:2%">No.</th><th style="width:9%">Identity                                 </th><th style="width:23%">Details                                                                                                                                                                                                                                                                       </th><th style="width:8%">Arrest Date  </th><th style="width:10%">Ground(s) for Arrest (NSL)                                      </th><th style="width:10%">Ground(s) for Arrest (Non-NSL)                                                                                                           </th><th style="width:8%">Charge Date  </th><th style="width:10%">Charge(s) (NSL)                    </th><th style="width:10%">Charge(s) (Non-NSL)                                                                                                           </th><th style="width:10%">Status                                                                </th></tr>
 </thead>
 <tbody>
 <tr><td >         1</td><td>Tong Ying-kit                            </td><td>Rode a motorcycle into a group of police officers with a flag bearing a forbidden slogan; arrested at scene of demonstration                                                                                                                                                     </td><td>2020-07-01   </td><td>Inciting or abetting secession; Terrorist action</td><td>Dangerous driving                                                                                                       </td><td>2020-07-03   </td><td>Secession; Terrorist action   </td><td>                                                                                                                        </td><td>Charged; Denied bail; Will be trialed without a jury                  </td></tr>
