--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -30,7 +30,7 @@ body {
 #wrapper
 {
 width:100%;
-max-width: 600px;
+max-width: 320px;
 margin:0 auto;
 overflow:hidden;
 }
@@ -40,15 +40,16 @@ overflow:hidden;
 max-width: 95%;
 font-size: 14px;
 font-family: Georgia, Times, "Times New Roman", serif;
-/* margin-bottom:5px; */
+margin-left:5px;
 text-align:center;
 vertical-align: text-top;
 }
 #venn
 {
 /* overflow:hidden; */
-/* max-width: 90%;
-margin-bottom:5px; */
+/* max-width: 90%; */
+margin-top:-30px;
+margin-bottom:-30px;
 text-align:center;
 /* vertical-align: text-top; */
 }
@@ -63,8 +64,8 @@ text-align:center;
 // YOU WILL NEED TO DO MATH HERE IF YOU WANT THE TWO VENN DIAGRAMS TO LINE UP, SIZE WISE
 /////////////////////////////////////////////////////////////////////////////////////////////////////////
 var chart = venn.VennDiagram()
-                 .width(580)
-                 .height(500)
+									.width(320)
+									.height(300)
 								 // https://github.com/benfred/venn.js/blob/master/examples/css_styled.html
 								 .styled(false);
 
