--- a/viz/NSL/charges_venn.html
+++ b/viz/NSL/charges_venn.html
@@ -37,15 +37,18 @@ overflow:hidden;
 max-width: 95%;
 font-size: 14px;
 font-family: Georgia, Times, "Times New Roman", serif;
-/* margin-bottom:5px; */
+margin-left:10px;
 text-align:center;
 vertical-align: text-top;
 }
+
+/* MAY NEED TO FIX TOP MARGIN HERE TO MATCH ARRESTS, DEPENDING ON HED */
 #venn
 {
 /* overflow:hidden; */
-/* max-width: 90%;
-margin-bottom:5px; */
+/* max-width: 90%; */
+margin-bottom:-30px;
+margin-top:-30px;
 text-align:center;
 /* vertical-align: text-top; */
 }
