--- a/viz/NSL/NSL_categories_grouped_bar1.html
+++ b/viz/NSL/NSL_categories_grouped_bar1.html
@@ -6,9 +6,7 @@
 <style>
 
 body{
-    max-width:1500px;
-    max-height:1200px;
-		font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Arial", sans-serif;
 }
 
 #wrapper {
@@ -22,7 +20,8 @@ overflow:hidden;
 overflow:hidden;
 max-width: 90%;
 font-size: 14px;
-/* margin-bottom:5px; */
+font-family: Georgia, Times, "Times New Roman", serif;
+/* margin-left:5px; */
 text-align:center;
 vertical-align: text-top;
 }
@@ -69,7 +68,7 @@ top:-80px; */
 <script>
 
 var margin = {top: 20, right: 20, bottom: 40, left: 20},
-    width = 400 - margin.left - margin.right,
+    width = 350 - margin.left - margin.right,
     height = 400 - margin.top - margin.bottom;
 
 var x0 = d3.scale.ordinal()
