--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -5,7 +5,8 @@
 <title>NSL vs. Non-NSL Arrests</title>
 <style>
 body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+		max-width: 255px;
+    font-family: "Arial", sans-serif;
     font-size: 12px;
 }
 </style>
