--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -11,7 +11,7 @@ body{
 
 #wrapper {
 width:99%;
-max-width: 500px;
+max-width: 350px;
 margin:0 auto;
 overflow:hidden;
 }
@@ -51,15 +51,15 @@ top:-80px; */
 var pie = new d3pie("pieChart", {
 
 	"size": {
-		"canvasWidth": 400,
+		"canvasWidth": 330,
 		"canvasHeight": 330,
-		"pieOuterRadius": "30%"
+		"pieOuterRadius": "70%"
 	},
 	"data": {
 		// "sortOrder": "value-desc",
 		"content": [
 			{
-	"label": "Foreign connection",
+	"label": "Foreign",
 	"value": 17,
 	"color": "#686868"
 },
@@ -75,21 +75,24 @@ var pie = new d3pie("pieChart", {
 	},
 	"labels": {
 		"outer": {
-			"format": "label-percentage2",
+			"format": "none",
+			// "format": "label-percentage2",
 			"pieDistance": 10
 		},
 		"inner": {
-			"format": "value",
+			// "format": "value",
+			"format": "label-value2"
 			//"hideWhenLessThanPercentage": 2
 		},
 		"mainLabel": {
-			"color": "#000000",
+			// "color": "#000000",
+			"color": "white",
 			"fontSize": 14,
 			"font": "Arial"
 		},
 		"percentage": {
 			"color": "#000000",
-			"decimalPlaces": 1,
+			"decimalPlaces": 0,
 			"fontSize": 14,
 			"font": "Arial"
 		},
@@ -120,10 +123,10 @@ var pie = new d3pie("pieChart", {
   "misc": {
 		"gradient": {
 			"enabled": false,
-			"percentage": 100
+			"percentage": 90
 		},
 		"canvasPadding":{
-      "top":-150,"right":0,"bottom":0,"left":-50}
+      "top":-75,"right":0,"bottom":0,"left":0}
 	}
 
 });
