--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -11,14 +11,14 @@ body{
 
 #wrapper {
 width:99%;
-max-width: 350px;
+min-width: 350;
 margin:0 auto;
 overflow:hidden;
 }
 #header
 {
 overflow:hidden;
-max-width: 90%;
+/* max-width: 90%; */
 font-size: 14px;
 font-family: Georgia, Times, "Times New Roman", serif;
 /* margin-bottom:5px; */
@@ -28,10 +28,10 @@ vertical-align: text-top;
 
 #pieChart {
 text-align:center;
-
 /* position:relative;
 left:-50px;
 top:-80px; */
+background-color: #FBD603;
 }
 
 </style>
@@ -53,7 +53,7 @@ var pie = new d3pie("pieChart", {
 	"size": {
 		"canvasWidth": 330,
 		"canvasHeight": 330,
-		"pieOuterRadius": "70%"
+		"pieOuterRadius": "90%"
 	},
 	"data": {
 		// "sortOrder": "value-desc",
@@ -126,7 +126,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 90
 		},
 		"canvasPadding":{
-      "top":-75,"right":0,"bottom":-40,"left":0}
+      "top":0,"right":0,"bottom":0,"left":0}
 	}
 
 });
