--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -5,7 +5,8 @@
 <title>NSL vs. Non-NSL Arrests</title>
 <style>
 body {
-		max-width: 255px;
+		/* max-width: 255px; */
+		min-width:255px;
     font-family: "Arial", sans-serif;
     font-size: 12px;
 }
@@ -30,25 +31,27 @@ body {
 
 #wrapper
 {
-width:100%;
-/* margin:0 auto; */
+width:99%;
+margin:0 auto;
 overflow:hidden;
+background-color: #FBD603;
 }
 #header
 {
 overflow:hidden;
-max-width: 95%;
+/* max-width: 95%; */
 font-size: 14px;
 font-family: Georgia, Times, "Times New Roman", serif;
-margin-left:5px;
+/* margin-left:5px; */
 text-align:center;
 vertical-align: text-top;
 }
 #venn
 {
+background-color: #FBD999;
 /* overflow:hidden; */
 /* max-width: 90%; */
-margin-top:-30px;
+margin-top:-40px;
 margin-bottom:-30px;
 text-align:center;
 /* vertical-align: text-top; */
