--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -31,7 +31,7 @@ text-align:center;
 /* position:relative;
 left:-50px;
 top:-80px; */
-background-color: #FBD603;
+/* background-color: #FBD603; */
 }
 
 </style>
@@ -51,8 +51,8 @@ background-color: #FBD603;
 var pie = new d3pie("pieChart", {
 
 	"size": {
-		"canvasWidth": 330,
-		"canvasHeight": 330,
+		"canvasWidth": 280,
+		"canvasHeight": 280,
 		"pieOuterRadius": "90%"
 	},
 	"data": {
