--- a/viz/NSL/charges_venn.html
+++ b/viz/NSL/charges_venn.html
@@ -5,7 +5,9 @@
 <title>NSL vs. Non-NSL Charges</title>
 <style>
 body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+		/* max-width: 255px; */
+		min-width:255px;
+    font-family: "Arial", sans-serif;
     font-size: 12px;
 }
 </style>
@@ -27,17 +29,17 @@ body {
 #wrapper
 {
 width:100%;
-max-width: 252px;
-/* margin:0 auto; */
+margin:0 auto;
 overflow:hidden;
+background-color: #FBD603;
 }
 #header
 {
 overflow:hidden;
-max-width: 95%;
+/* max-width: 95%; */
 font-size: 14px;
 font-family: Georgia, Times, "Times New Roman", serif;
-margin-left:10px;
+/* margin-left:5px; */
 text-align:center;
 vertical-align: text-top;
 }
@@ -45,10 +47,11 @@ vertical-align: text-top;
 /* MAY NEED TO FIX TOP MARGIN HERE TO MATCH ARRESTS, DEPENDING ON HED */
 #venn
 {
+background-color: #FBD999;
 /* overflow:hidden; */
 /* max-width: 90%; */
+margin-top:-40px;
 margin-bottom:-30px;
-margin-top:-30px;
 text-align:center;
 /* vertical-align: text-top; */
 }
