--- a/viz/NSL/NSL_categories_grouped_bar1.html
+++ b/viz/NSL/NSL_categories_grouped_bar1.html
@@ -3,6 +3,7 @@
 <!-- https://bl.ocks.org/ctiml/541d7cc770108ccff79a -->
 
 <meta charset="utf-8">
+<title>NSL Categories</title>
 <style>
 
 body{
@@ -10,7 +11,7 @@ body{
 }
 
 #wrapper {
-width:99%;
+width:100%;
 max-width: 1600px;
 margin:0 auto;
 overflow:hidden;
@@ -18,8 +19,8 @@ overflow:hidden;
 #header
 {
 overflow:hidden;
-max-width: 90%;
-font-size: 14px;
+max-width: 100%;
+font-size: 12px;
 font-family: Georgia, Times, "Times New Roman", serif;
 /* margin-left:5px; */
 text-align:center;
