--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -34,13 +34,13 @@ body {
 width:100%;
 margin:0 auto;
 overflow:hidden;
-background-color: #FBD603;
+/* background-color: #FBD603; */
 }
 #header
 {
 overflow:hidden;
-/* max-width: 95%; */
-font-size: 14px;
+max-width: 100%;
+font-size: 12px;
 font-family: Georgia, Times, "Times New Roman", serif;
 /* margin-left:5px; */
 text-align:center;
@@ -48,7 +48,7 @@ vertical-align: text-top;
 }
 #venn
 {
-background-color: #FBD999;
+/* background-color: #FBD999; */
 /* overflow:hidden; */
 /* max-width: 90%; */
 margin-top:-40px;
