--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>NSL Arrests - Speech</title>
+<title>NSL Arrests vs. Charges</title>
 <style>
 
 body{
@@ -10,16 +10,19 @@ body{
 }
 
 #wrapper {
-width:99%;
-min-width: 350;
+width:100%;
+min-width: 350px;
+max-width: 500px;
+max-height: 230px;
 margin:0 auto;
 overflow:hidden;
+/* background-color: #FBD603; */
 }
 #header
 {
 overflow:hidden;
-/* max-width: 90%; */
-font-size: 14px;
+max-width: 100%;
+font-size: 12px;
 font-family: Georgia, Times, "Times New Roman", serif;
 /* margin-bottom:5px; */
 text-align:center;
@@ -28,6 +31,7 @@ vertical-align: text-top;
 
 #pieChart {
 text-align:center;
+/* background-color: #FBD999; */
 /* position:relative;
 left:-50px;
 top:-80px; */
@@ -51,9 +55,9 @@ top:-80px; */
 var pie = new d3pie("pieChart", {
 
 	"size": {
-		"canvasWidth": 280,
-		"canvasHeight": 280,
-		"pieOuterRadius": "90%"
+		"canvasWidth": 400,
+		"canvasHeight": 330,
+		"pieOuterRadius": "30%"
 	},
 	"data": {
 		// "sortOrder": "value-desc",
@@ -75,24 +79,21 @@ var pie = new d3pie("pieChart", {
 	},
 	"labels": {
 		"outer": {
-			"format": "none",
-			// "format": "label-percentage2",
+			"format": "label-percentage2",
 			"pieDistance": 10
 		},
 		"inner": {
-			// "format": "value",
-			"format": "label-value2"
+			"format": "value",
 			//"hideWhenLessThanPercentage": 2
 		},
 		"mainLabel": {
-			// "color": "#000000",
-			"color": "white",
+			"color": "#000000",
 			"fontSize": 14,
 			"font": "Arial"
 		},
 		"percentage": {
 			"color": "#000000",
-			"decimalPlaces": 0,
+			"decimalPlaces": 1,
 			"fontSize": 14,
 			"font": "Arial"
 		},
@@ -123,10 +124,10 @@ var pie = new d3pie("pieChart", {
   "misc": {
 		"gradient": {
 			"enabled": false,
-			"percentage": 90
+			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":0,"right":0,"bottom":0,"left":0}
+      "top":-200,"right":0,"bottom":0,"left":-10} //150
 	}
 
 });
