--- a/viz/NSL/arrests_month.html
+++ b/viz/NSL/arrests_month.html
@@ -49,7 +49,8 @@
 				#header
 				{
 				overflow:hidden;
-				max-width: 95%;
+				max-width: 100%;
+				font-size: 12px;
 				/* margin-bottom:5px; */
 				text-align:center;
 				vertical-align: text-top;
