--- a/viz/NSL/month_combo.html
+++ b/viz/NSL/month_combo.html
@@ -61,6 +61,7 @@
 				text-align:center;
 				vertical-align: text-top;
 				font-family: Georgia, Times, "Times New Roman", serif;
+				font-size: 12px;
 				}
 				#header2
 				{
@@ -73,6 +74,7 @@
 				text-align:center;
 				vertical-align: text-top;
 				font-family: Georgia, Times, "Times New Roman", serif;
+				font-size: 12px;
 				}
 
     </style>
