--- a/viz/NSL/NSL_categories_grouped_bar1.html
+++ b/viz/NSL/NSL_categories_grouped_bar1.html
@@ -12,7 +12,7 @@ body{
 
 #wrapper {
 width:100%;
-max-width: 1600px;
+max-width: 500px;
 margin:0 auto;
 overflow:hidden;
 }
@@ -52,8 +52,8 @@ top:-80px; */
 
 .footnote {
 		font-size: 13px;
-		fill: #000;
 		text-align:center;
+		fill: #000;
 		font-family: Georgia, Times, "Times New Roman", serif;
 }
 
@@ -191,7 +191,7 @@ d3.csv("NSL_categories_group.csv", function(error, data) {
 });
 
 
-d3.select("body").append("div")
+d3.select("#chart").append("div")
     .attr("class", "footnote")
     .html("<em>The Tong Ying-kit case is counted twice in this chart because it involves both the secession and terrorism provisions.</em>");
 
